# development-environment-setup

./: README.md
poetry_demo/: README.md  pyproject.toml
poetry_demo/poetry_demo/: hello.ipynb  hello.py
