[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Mauro J. Sanchirico III <156733573+mauro-j-sanchirico@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
